Added pagination for user products and fixed bugs

--- a/app/templates/auth/email/change_email.html
+++ b/app/templates/auth/email/change_email.html
@@ -1,5 +1,5 @@
 <p>Уважаемый {{ user.name }},</p>
 <p>Для подтверждение нового email для <b>Avitoclone</b> 
-   перейдите по <a href="{{ url_for('auth.change_email', token=token, _external=True) }}">ссылке</a>.</p></p>
+   перейдите по <a href="{{ url_for('profile.change_email_confirmation', token=token, _external=True, user_id=current_user.id) }}">ссылке</a>.</p></p>
 <p>С Уважением,</p>
 <p>Поддержка Клиентов.</p>
