--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-4">
             
-            <form action="{{ url_for('auth.login') }}" method="POST">
+            <form action="" method="POST">
                 {{ form.hidden_tag() }}
                 <div class="mb-3">
                     {{ form.email.label }}
