--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav"> 
                     {% if not current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.login') }}">Войти</a>
+                        <a class="nav-link" href="{{ url_for('auth.login', next=request.path) }}">Войти</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.registration') }}">Зарегистрироваться</a>
