--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -34,16 +34,16 @@
         <div class="col-6">
             <nav aria-label="Page navigation">
                 <ul class="pagination">
-                    <li class="page-item {% if not pagination.has_prev %} disabled {% endif %}"  >
-                        <a class="page-link" href="{% if pagination.has_prev %} {{ prev_url }} {% endif %}" aria-label="Previous">
+                    <li class="page-item {% if not prev_url %} disabled {% endif %}"  >
+                        <a class="page-link" href="{% if prev_url %} {{ prev_url }} {% endif %}" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    {% for p in range(1, pagination.pages + 1) %}
-                        <li class="page-item {% if pagination.page == p %} active aria-current="page"{% endif %}"><a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                    {% for p in range(1, pages + 1) %}
+                        <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" href="?page={{ p }}">{{ p }}</a>
                     {% endfor %}
-                    <li class="page-item {% if not pagination.has_next %} disabled {% endif %}">
-                        <a class="page-link" href="{% if pagination.has_next %} {{ next_url }} {% endif %}" aria-label="Next">
+                    <li class="page-item {% if not next_url %} disabled {% endif %}">
+                        <a class="page-link" href="{% if next_url %} {{ next_url }} {% endif %}" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
