--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -5,12 +5,14 @@
         <div class='col-3'>
         </div>
         <div class='col-6'>
-            <form class="navbar-form navbar-left" method="get"
+            <form style='margin-bottom:50px;' class="navbar-form navbar-left" method="get"
                     action="{{ url_for('main.search') }}">
                 <div class="form-group">
-                    {{ g.search_form.q(size=20, class='form-control',
+                    {{ g.search_form.q(class='form-control',
                         placeholder=g.search_form.q.label.text) }}
+                        
                 </div>
+                
             </form>
             {% for product in products %}
             {% if not product.hidden %}
