--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -5,7 +5,7 @@
         <div class='col-3'>
         </div>
         <div class='col-6'>
-            <form class="navbar-form navbar-left" method="get"
+            <form style='margin-bottom:50px;' class="navbar-form navbar-left" method="get"
                     action="{{ url_for('main.search') }}">
                 <div class="form-group">
                     {{ g.search_form.q(size=20, class='form-control',
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     {% for p in range(1, pages + 1) %}
-                        <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                        <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" href="{{ request.full_path }}&page={{ p }}">{{ p }}</a>
                     {% endfor %}
                     <li class="page-item {% if not next_url %} disabled {% endif %}">
                         <a class="page-link" href="{% if next_url %} {{ next_url }} {% endif %}" aria-label="Next">
