--- a/app/templates/main/product.html
+++ b/app/templates/main/product.html
@@ -3,7 +3,7 @@
 {% block page_content %}
     <div class="row">
         <div class="row justify-content-start">
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <h3>{{ product.title }}</h3>
                 <h6>Опубликовано: {{ product.published.strftime('%d.%m.%Y %H:%M') }}</h6>
                 <img src="{{ product.get_photo_link() }}" height="280" weight="280">
@@ -12,16 +12,17 @@
                 <hr>
                 <p>Описание: {{ product.description }}</p>
             </div>
-            <div class="col-4">
+            <div class="col-md-3">
                 <h4>{{ product.price }} ₽</h4>
                 <hr>
                 <p style="color: blue;"><b>Автор: <a href="{{ url_for('profile.user_profile', user_id=product.user_id) }}">{{ user.name }}</a></b></p>
-                <p>{{ user.email }}</p>
+                <p><strong>Контакты</strong></p>
+                <p>email: {{ user.email }}</p>
                 <hr>
                 <p>Объявление: №{{ product.id }}</p>
                 {% if user == current_user %}
                     <div style="overflow:auto">        
-                        <a style="margin: 0 1px" href="{{ url_for('post.edit_product', user_id=user.id, product_id=product.id) }}" class="btn btn-primary float-end" id="button"  
+                        <a style="margin: 0 1px" href="{{ url_for('post.edit_product', user_id=user.id, product_id=product.id) }}" class="btn btn-primary" id="button"  
                         name="button" type="button">Редактировать</a> 
                     </div>
                 {% endif %}
