--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -40,7 +40,8 @@
                         </a>
                     </li>
                     {% for p in range(1, pages + 1) %}
-                        <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" href="{{ request.full_path }}&page={{ p }}">{{ p }}</a>
+                        <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" 
+                            href="{{ url_for('main.search', q=form.q.data, page=p) }}">{{ p }}</a>
                     {% endfor %}
                     <li class="page-item {% if not next_url %} disabled {% endif %}">
                         <a class="page-link" href="{% if next_url %} {{ next_url }} {% endif %}" aria-label="Next">
