Price range filtering implement

--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -10,6 +10,10 @@
                 <div class="form-group">
                     {{ search_form.q(size=20, class='form-control',
                         placeholder=search_form.q.label.text) }}
+
+                    {{ search_form.from_price(placeholder=search_form.from_price.label.text) }}
+                    {{ search_form.to_price(placeholder=search_form.to_price.label.text) }}
+                    {{ search_form.submit() }}
                 </div>
             </form>
             {% for product in products %}
@@ -39,9 +43,11 @@
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    {% for p in range(1, pages + 1) %}
+                    {% for p in range(1, pages + 2) %}
                         <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" 
-                            href="{{ url_for('main.search', q=form.q.data, page=p) }}">{{ p }}</a>
+                            href="{{ url_for('main.search', q=search_form.q.data, 
+                            from_price=search_form.from_price.data, to_price=search_form.to_price.data, 
+                            page=p) }}">{{ p }}</a>
                     {% endfor %}
                     <li class="page-item {% if not next_url %} disabled {% endif %}">
                         <a class="page-link" href="{% if next_url %} {{ next_url }} {% endif %}" aria-label="Next">
