--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -10,7 +10,10 @@
                 <div class="form-group">
                     {{ search_form.q(class='form-control',
                         placeholder=search_form.q.label.text) }}
-                        
+
+                    {{ search_form.from_price(placeholder=search_form.from_price.label.text) }}
+                    {{ search_form.to_price(placeholder=search_form.to_price.label.text) }}
+                    {{ search_form.submit() }}
                 </div>
                 
             </form>
