--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -13,6 +13,7 @@
 
                     {{ search_form.from_price(placeholder=search_form.from_price.label.text) }}
                     {{ search_form.to_price(placeholder=search_form.to_price.label.text) }}
+                    {{ search_form.order(placeholder=search_form.to_price.label.text) }}
                     {{ search_form.submit() }}
                 </div>
             </form>
@@ -46,7 +47,7 @@
                     {% for p in range(1, pages + 2) %}
                         <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" 
                             href="{{ url_for('main.search', q=search_form.q.data, 
-                            from_price=search_form.from_price.data, to_price=search_form.to_price.data, 
+                            from_price=search_form.from_price.data, to_price=search_form.to_price.data, order=search_form.order.data,
                             page=p) }}">{{ p }}</a>
                     {% endfor %}
                     <li class="page-item {% if not next_url %} disabled {% endif %}">
