--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -1,5 +1,5 @@
 <p>Уважаемый {{ user.name }},</p>
 <p>Добро пожаловать на <b>Avitoclone</b>!</p>
-<p>Для того чтобы подтвердить ваш аккаунт перейдите по ссылке <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">нажмите</a>.</p>
+<p>Для того чтобы подтвердить ваш аккаунт перейдите по <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">ссылке</a>.</p>
 <p>С Уважением,</p>
 <p>Поддержка Клиентов.</p>
