--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -2,9 +2,9 @@
 
 {% block page_content %}
     <div class="row">
-        <div class='col-3'>
+        <div class='col-sm-3'>
         </div>
-        <div class='col-6'>
+        <div class='col-sm-6'>
             <form style='margin-bottom:50px;' class="navbar-form navbar-left" method="get"
                     action="{{ url_for('main.search') }}">
                 <div class="form-group">
@@ -30,13 +30,13 @@
             {% endif %}  
             {% endfor %}  
         </div>
-        <div class="col-3">
+        <div class="col-sm-3">
         </div>
     </div>
     <div class="row">
-        <div class="col-3">
+        <div class="col-sm-3">
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li class="page-item {% if not prev_url %} disabled {% endif %}"  >
@@ -58,7 +58,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-3">
+        <div class="col-sm-3">
         </div>
     </div>
 {% endblock page_content %}
