--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,7 +3,7 @@
 {% block page_content %}
     <h1>Авторизация</h1>
     <div class="row">
-        <div class="col-4">
+        <div class="col-sm-4">
             
             <form action="" method="POST">
                 {{ form.hidden_tag() }}
@@ -22,7 +22,7 @@
                 {{ form.submit() }}
             </form>
         </div>
-        <div class="col-8">
+        <div class="col-sm-8">
         </div>
     </div>
 {% endblock page_content %}
