--- a/app/templates/auth/registration.html
+++ b/app/templates/auth/registration.html
@@ -3,7 +3,7 @@
 {% block page_content %}
     <h1>Регистрация</h1>
     <div class="row">
-        <div class="col-4">
+        <div class="col-sm-4">
             
             <form action="{{ url_for('auth.registration') }}" method="POST">
                 {{ form.hidden_tag() }}
