--- a/app/templates/main/500.html
+++ b/app/templates/main/500.html
@@ -2,7 +2,7 @@
 
 {% block page_content %}
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-sm-12">
         <div class="error-template">
             <h2>
                 Произошла ошибка сервера!
