--- a/app/templates/main/product.html
+++ b/app/templates/main/product.html
@@ -3,7 +3,7 @@
 {% block page_content %}
     <div class="row">
         <div class="row justify-content-start">
-            <div class="col-md-5">
+            <div class="col-sm-5">
                 <h3>{{ product.title }}</h3>
                 <h6>Опубликовано: {{ product.published.strftime('%d.%m.%Y %H:%M') }}</h6>
                 <img src="{{ product.get_photo_link() }}" height="280" weight="280">
@@ -12,7 +12,7 @@
                 <hr>
                 <p>Описание: {{ product.description }}</p>
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-3">
                 <h4>{{ product.price }} ₽</h4>
                 <hr>
                 <p style="color: blue;"><b>Автор: <a href="{{ url_for('profile.user_profile', user_id=product.user_id) }}">{{ user.name }}</a></b></p>
@@ -31,7 +31,7 @@
     </div>
     <div class="row">
         <div class="row justify-content-start">
-            <div class="col-md-8">
+            <div class="col-sm-8">
                 <hr>
                 {% if product.comments %}
                     <h3>Комментарии({{ product.comments_count() }}):</h3>
@@ -43,7 +43,7 @@
                                     <small>Опубликовано: {{ comment.created.strftime('%d.%m.%Y') }} | 
                                         Автор:  
                                         <img src="{{ comment.user.get_avatar_link() }}" width="25" height="25" class="d-inline-block align-text-top rounded-circle">
-                                        <a href="{{ url_for('profile.user_profile', user_id=product.user_id) }}">{{ comment.user.name }}</a></small>
+                                        <a href="{{ url_for('profile.user_profile', user_id=comment.user.id) }}">{{ comment.user.name }}</a></small>
                                 </p>
                             </div>
                         </div>
