--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -2,7 +2,7 @@
 
 {% block page_content %}
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-sm-3">
                 <img src="{{ user.get_avatar_link() }}" class="rounded-circle" weight="100" height="100">
                 <br>
                 <h4>{{ user.name }}</h4>
@@ -22,7 +22,7 @@
                     <a href="{{ url_for('post.user_products', user_id=user.id) }}">Объявления {{ user.name }}</a>
                 {% endif %}
         </div>
-        <div class="col-md-9">
+        <div class="col-sm-9">
             {% block user_content %}{% endblock user_content %}
         </div>
     </div>
