Changed templates and views for product

--- a/app/templates/main/product.html
+++ b/app/templates/main/product.html
@@ -10,7 +10,7 @@
                 <hr>
                 <p><em>Адрес: {{ product.address }}</em></p>
                 <hr>
-                <p>Описание: {{ product.description }}</p>
+                <p id="descp">Описание: {{ product.description }}</p>
             </div>
             <div class="col-sm-3">
                 <h4>{{ product.price }} ₽</h4>
