--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -24,7 +24,8 @@
                 <div class="item_card border border shadow-sm p-3 mb-5 bg-white rounded">
                     <h5><a href="product/{{ product.id }}">{{ product.title }}</a></h5>
                     <img src="{{ product.get_photo_link() }}" width="200" height="200">
-                    <p>Описание: {{ product.description[:100] }}{% if product.description|length > 100 %}...{% endif %}</p>
+                    <p>Описание: <a href="{{ url_for('main.product_page', product_id=product.id, _anchor='descp') }}">
+                            {{ product.description[:100] }}{% if product.description|length > 100 %}...{% endif %}</a></p>
                     <p>Адрес: {{ product.address }}</p>
                     <p><em>Цена: {{ product.price }} руб.</em></p>
                     <p>Опубликовано: {{ product.published.strftime('%d.%m.%Y %H:%M') }}</p>
