--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -12,9 +12,9 @@
                     {{ search_form.q(class='form-control',
                         placeholder=search_form.q.label.text) }}
 
-                    {{ search_form.from_price(placeholder=search_form.from_price.label.text) }}
-                    {{ search_form.to_price(placeholder=search_form.to_price.label.text) }}
-                    {{ search_form.order(placeholder=search_form.to_price.label.text) }}
+                    {{ search_form.from_num(placeholder=search_form.from_num.label.text) }}
+                    {{ search_form.to_num(placeholder=search_form.to_num.label.text) }}
+                    {{ search_form.order(placeholder=search_form.order.label.text) }}
                     {{ search_form.submit() }}
                 </div>
             </form>
