--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -11,9 +11,9 @@
                     {{ search_form.q(size=20, class='form-control',
                         placeholder=search_form.q.label.text) }}
 
-                    {{ search_form.from_price(placeholder=search_form.from_price.label.text) }}
-                    {{ search_form.to_price(placeholder=search_form.to_price.label.text) }}
-                    {{ search_form.order(placeholder=search_form.to_price.label.text) }}
+                    {{ search_form.from_num(placeholder=search_form.from_num.label.text) }}
+                    {{ search_form.to_num(placeholder=search_form.to_num.label.text) }}
+                    {{ search_form.order(placeholder=search_form.order.label.text) }}
                     {{ search_form.submit() }}
                 </div>
             </form>
@@ -47,7 +47,7 @@
                     {% for p in range(1, pages + 2) %}
                         <li class="page-item {% if page == p %} active aria-current="page"{% endif %}"><a class="page-link" 
                             href="{{ url_for('main.search', q=search_form.q.data, 
-                            from_price=search_form.from_price.data, to_price=search_form.to_price.data, order=search_form.order.data,
+                            from_num=search_form.from_num.data, to_num=search_form.to_num.data, order=search_form.order.data,
                             page=p) }}">{{ p }}</a>
                     {% endfor %}
                     <li class="page-item {% if not next_url %} disabled {% endif %}">
